--- a/ChurchResourceManagerWeb/Views/Membership/_manageMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_manageMembership.cshtml
@@ -1,5 +1,4 @@
-﻿<div class="container">
-    <div class="row">
+﻿    <div class="row">
         <div class="col-xs-12">
             <uib-tabset active="mmc.activeTab">
                 <!--Family Form-->
@@ -20,4 +19,3 @@
             </uib-tabset>
         </div>
     </div>
-</div>
