--- a/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_membersGrid.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="col-xs-12">
     <div uib-accordion>
-        <div uib-accordion-group class="panel panel-primary text-center" heading="Members" is-open="true">
+        <div uib-accordion-group class="panel panel-default" heading="Members" is-open="true">
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead>
