--- a/ChurchResourceManagerWeb/Views/Offerings/_offeringActivity.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_offeringActivity.cshtml
@@ -1,6 +1,6 @@
 ﻿<div class="col-xs-12">
     <div uib-accordion>
-        <div uib-accordion-group class="panel panel-primary text-center" heading="{{oac.panelSettings.panelHeading}}" is-open="oac.panelSettings.isOpen">
+        <div uib-accordion-group class="panel panel-default" heading="{{oac.panelSettings.panelHeading}}" is-open="oac.panelSettings.isOpen">
             <div class="table-responsive">
                 <table class="table table-striped table-hover">
                     <thead>
