--- a/ChurchResourceManagerWeb/Views/Membership/EditMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/EditMembership.cshtml
@@ -4,7 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2 style="padding-bottom: 40px;">@ViewBag.Title</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">@ViewBag.Title</h1>
+    </div>
+</div>
 
 <div ng-controller="membershipController as mc">
     <manage-membership active-tab="mc.activeTab"
