--- a/ChurchResourceManagerWeb/Views/Membership/Home.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/Home.cshtml
@@ -3,7 +3,12 @@
     ViewBag.Title = "Membership";
 }
 
-<h2 style="padding-bottom: 40px;">@ViewBag.Title</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">@ViewBag.Title</h1>
+    </div>
+    <!-- /.col-lg-12 -->
+</div>
 
 
 
