--- a/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_contactInformation.cshtml
@@ -1,6 +1,6 @@
 ﻿<form id="cic.contactInfoMainForm" name="cic.contactInfoMainForm" novalidate autocomplete="off" ng-submit="cic.submit(cic.contactInfo, cic.contactInfoMainForm)">
     <div class="row">
-        <div class="col-xs-11" @*style="padding-left: 3%;"*@>
+        <div class="col-xs-8">
             <div ng-repeat="info in cic.contactInfo track by $index">
                 <div style="padding-bottom: 1%; padding-left: 3%;" ng-show="cic.beingEdited">
                     <ng-form id="contactInfoForm" name="contactInfoForm">
@@ -11,7 +11,7 @@
                                         Contact Information - {{info.Name}}
                                         <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': info.IsContactInfoPanelOpen, 'glyphicon-chevron-up': !info.IsContactInfoPanelOpen}"></i>
                                     </uib-accordion-heading>
-                                    <div class="col-xs-6">
+                                    <div class="col-xs-4">
                                         <div class="form-group" ng-class="{'has-error' : contactInfoForm.homePhoneNumberTxtBx.$invalid && contactInfoForm.homePhoneNumberTxtBx.$touched}">
                                             <label for="homePhoneNumberTxtBx">Home Phone Number</label>
                                             <input id="homePhoneNumberTxtBx" name="homePhoneNumberTxtBx" class="form-control" type="text" ng-model="cic.contactInfo[$index].HomePhoneNumber"
@@ -43,7 +43,7 @@
                                 </div>
                             </uib-accordion>
                             <div style="padding-top: 1%; padding-left: .5%;" ng-if="cic.followLastCurrentActiveIndex($index, cic.contactInfo.length)">
-                                <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-primary" type="submit" ng-disabled="!cic.beingEdited">
+                                <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-default" type="submit" ng-disabled="!cic.beingEdited">
                                     <span class="glyphicon glyphicon-check"></span> Save
                                 </button>
                             </div>
