--- a/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_family.cshtml
@@ -1,6 +1,6 @@
 ﻿<form id="fc.addFamilyForm" name="fc.addFamilyForm" novalidate ng-submit="fc.submit(fc.family, fc.addFamilyForm)" autocomplete="off">
     <div class="row" style="padding-left: 3%;">
-        <div class="col-xs-6">
+        <div class="col-xs-4">
             <div class="form-group" ng-class="{'has-error' : fc.addFamilyForm.familyNameTxtBx.$invalid && fc.addFamilyForm.familyNameTxtBx.$touched}" ng-show="fc.beingEdited">
                 <label for="familyNameTxtBx">Family Name</label>
                 <input id="familyNameTxtBx" name="familyNameTxtBx" class="form-control" type="text" placeholder="(Ex. Torres-Velez)"
@@ -15,10 +15,10 @@
         </div>
     </div>
     <div>
-        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="fc.edit()" ng-if="!fc.beingEdited">
+        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-default" type="button" ng-click="fc.edit()" ng-if="!fc.beingEdited">
             <span class="glyphicon glyphicon-edit"></span> Edit
         </button>
-        <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-primary" type="submit" ng-if="fc.beingEdited">
+        <button id="submitFamilyBtn" name="submitFamilyBtn" class="btn btn-default" type="submit" ng-if="fc.beingEdited">
             <span class="glyphicon glyphicon-check"></span> Save
         </button>
     </div>
