--- a/ChurchResourceManagerWeb/Views/Membership/_memberInformationReadOnly.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/_memberInformationReadOnly.cshtml
@@ -1,8 +1,8 @@
 ﻿<div style="padding-bottom: 1%;">
     <uib-accordion close-others="false">
-        <div uib-accordion-group class="panel-default" is-open="memberInfo.IsMemberInfoPanelOpen">
+        <div uib-accordion-group class="panel-default" is-open="mic.memberInfo.IsMemberInfoPanelOpen">
             <uib-accordion-heading>
-                Member Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': memberInfo.IsMemberInfoPanelOpen, 'glyphicon-chevron-up': !memberInfo.IsMemberInfoPanelOpen}"></i>
+                Member Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': mic.memberInfo.IsMemberInfoPanelOpen, 'glyphicon-chevron-up': !memberInfo.IsMemberInfoPanelOpen}"></i>
             </uib-accordion-heading>
             <div class="col-xs-12">
                 <div class="read-only-padding">
@@ -14,9 +14,9 @@
                     <div id="relationshipTypes">{{mic.memberInfo.SelectedRelationshipType.Description}}</div>
                 </div>
             </div>
-            <div uib-accordion-group class="panel-default" is-open="memberInfo.IsPersonalInfoPanelOpen">
+            <div uib-accordion-group class="panel-default" is-open="mic.memberInfo.IsPersonalInfoPanelOpen">
                 <uib-accordion-heading>
-                    Personal Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': memberInfo.IsPersonalInfoPanelOpen, 'glyphicon-chevron-up': !memberInfo.IsPersonalInfoPanelOpen}"></i>
+                    Personal Information <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': mic.memberInfo.IsPersonalInfoPanelOpen, 'glyphicon-chevron-up': !memberInfo.IsPersonalInfoPanelOpen}"></i>
                 </uib-accordion-heading>
                 <div class="col-xs-6">
                     <div class="read-only-padding">
@@ -52,7 +52,7 @@
         </div>
     </uib-accordion>
     <div style="padding-top: 1%; padding-left: .5%;" ng-show="mic.activeIndex">
-        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-primary" type="button" ng-click="mic.onEdit()" ng-disabled="mic.beingEdited">
+        <button id="editFamilyBtn" name="editFamilyBtn" class="btn btn-default" type="button" ng-click="mic.onEdit()" ng-disabled="mic.beingEdited">
             <span class="glyphicon glyphicon-edit"></span> Edit
         </button>
     </div>
