--- a/ChurchResourceManagerWeb/Views/Offerings/Home.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/Home.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "Offerings";
 }
 
-<h2>@ViewBag.Title</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">@ViewBag.Title</h1>
+    </div>
+</div>
 
 <div class="row">
     <div class="col-xs-4">
