--- a/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/_addOffering.cshtml
@@ -40,8 +40,8 @@
 
     <!--Submit and Clear Form Buttons-->
     <div class="col-xs-10">
-        <button id="submitBtn" name="submitBtn" class="btn btn-primary" type="submit">Save</button>
-        <button id="clearFormBtn" name="clearFormBtn" class="btn btn-info" type="button" ng-click="aoc.clearForm()">Clear Form</button>
+        <button id="submitBtn" name="submitBtn" class="btn btn-default" type="submit">Save</button>
+        <button id="clearFormBtn" name="clearFormBtn" class="btn btn-default" type="button" ng-click="aoc.clearForm()">Clear Form</button>
     </div>
 
 </form>
