--- a/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_Layout.cshtml
@@ -22,38 +22,52 @@
 
 </head>
 <body ng-cloak>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Church Resource Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li class="dropdown">
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="">Tithing <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li>@Html.ActionLink("Add Tithes", "AddTithes", "Tithing")</li>
-                        </ul>
-                    </li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+    @*<div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    @Html.ActionLink("Church Resource Manager", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="">Tithing <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li>@Html.ActionLink("Add Tithes", "AddTithes", "Tithing")</li>
+                            </ul>
+                        </li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    </ul>
+                    @Html.Partial("_LoginPartial")
+                </div>
             </div>
         </div>
+        <div id="mainContainer" name="mainContainer" class="container body-content">
+            @RenderBody()
+            <hr />
+            <footer>
+                <p>&copy; @DateTime.Now.Year - Church Resource Manager</p>
+            </footer>
+        </div>*@
+    <div id="wrapper">
+        <!-- Nav Bar -->
+        @Html.Partial("_NavBar")
+
+        <div id="page-wrapper">
+            @*<div class="row">
+                <div class="col-lg-12">*@
+                    @RenderBody()
+                @*</div>
+            </div>*@
+        </div>
+
     </div>
-    <div id="mainContainer" name="mainContainer" class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - Church Resource Manager</p>
-        </footer>
-    </div>
+
 
     @Scripts.Render("~/bundles/angular")
     @Scripts.Render("~/bundles/jquery")
