--- a/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_runningTotals.cshtml
@@ -1,7 +1,7 @@
 ﻿<!--Running Total-->
 <div class="col-xs-2">
-    <div class="panel panel-primary">
-        <div class="panel-heading text-center">
+    <div class="panel panel-default">
+        <div class="panel-heading">
             Today's Total
             @*<span class="glyphicon glyphicon-refresh clickable pull-right" ng-click="tc.getTithesRunningTotal()"></span>*@
         </div>
