--- a/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/AddTithes.cshtml
@@ -2,12 +2,20 @@
 @{
     ViewBag.Title = "AddTithes";
 }
+
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">@ViewBag.Title</h1>
+    </div>
+</div>
+
+
 <div ng-controller="tithingController as tc">
     <div class="container">
         <div class="row">
             <div class="col-xs-5">
-                <div class="panel panel-primary">
-                    <div class="panel-heading text-center">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
                         Add Tithes
                     </div>
                     <div class="panel-body">
