--- a/ChurchResourceManagerWeb/Views/Tithing/EditTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/EditTithes.cshtml
@@ -3,5 +3,9 @@
     ViewBag.Title = "Edit Tithes";
 }
 
-<h2>Edit Tithes</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">@ViewBag.Title</h1>
+    </div>
+</div>
 
