--- a/ChurchResourceManagerWeb/Views/Tithing/Home.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/Home.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "Tithing";
 }
 
-<h2>Tithing</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">@ViewBag.Title</h1>
+    </div>
+</div>
 
 
         <div class="row">
