--- a/ChurchResourceManagerWeb/Views/Tithing/TithesSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/TithesSearch.cshtml
@@ -3,7 +3,11 @@
     ViewBag.Title = "Tithes Search";
 }
 
-<h2 style="padding-bottom: 40px;">@ViewBag.Title</h2>
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">@ViewBag.Title</h1>
+    </div>
+</div>
 
 <div ng-controller="tithingController as tc">
     <tithing-activity get-tithing-activity="tc.getTithingActivity(tithingActivityType)"
