--- a/ChurchResourceManagerWeb/Views/Tithing/_addTithe.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/_addTithe.cshtml
@@ -74,7 +74,7 @@
 
     <!--Submit and Clear Form Buttons-->
     <div class="col-xs-10">
-        <button id="submitBtn" name="submitBtn" class="btn btn-primary" type="submit">Save</button>
-        <button id="clearFormBtn" name="clearFormBtn" class="btn btn-info" type="button" ng-click="atc.clearForm()">Clear Form</button>
+        <button id="submitBtn" name="submitBtn" class="btn btn-default" type="submit">Save</button>
+        <button id="clearFormBtn" name="clearFormBtn" class="btn btn-default" type="button" ng-click="atc.clearForm()">Clear Form</button>
     </div>
 </form>
