Added components for submit transaction and a shared component.

--- a/ChurchResourceManagerWeb/Views/Offerings/Home.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/Home.cshtml
@@ -1,13 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "Offerings";
-}
-
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">@ViewBag.Title</h1>
-    </div>
-</div>
+﻿<page-header page-title="Offerings"></page-header>
 
 <div class="row">
     <div class="col-xs-4">
