--- a/ChurchResourceManagerWeb/Views/Tithing/EditTithes.cshtml
+++ b/ChurchResourceManagerWeb/Views/Tithing/EditTithes.cshtml
@@ -1,11 +1,2 @@
-﻿
-@{
-    ViewBag.Title = "Edit Tithes";
-}
-
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">@ViewBag.Title</h1>
-    </div>
-</div>
+﻿<page-header page-title="Edit Tithes"></page-header>
 
