--- a/ChurchResourceManagerWeb/Views/Home/Index.cshtml
+++ b/ChurchResourceManagerWeb/Views/Home/Index.cshtml
@@ -128,11 +128,11 @@
             <div class="panel-heading">
                 <div class="row">
                     <div class="col-xs-3">
-                        <i class="fa fa-support fa-5x"></i>
+                        <i class="fa fa-bank fa-5x"></i>
                     </div>
                     <div class="col-xs-9 text-right">
                         <div class="huge">13</div>
-                        <div>Support Tickets!</div>
+                        <div>Income/Outgo</div>
                     </div>
                 </div>
             </div>
