--- a/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/AddMembership.cshtml
@@ -1,14 +1,4 @@
-﻿
-
-@{
-    ViewBag.Title = "Add Membership";
-}
-
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">@ViewBag.Title</h1>
-    </div>
-</div>
+﻿<page-header page-title="Add Membership"></page-header>
 
 <div ng-controller="membershipController as mc">
     <manage-membership active-tab="mc.activeTab"
