--- a/ChurchResourceManagerWeb/Views/Membership/EditMembership.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/EditMembership.cshtml
@@ -1,14 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "EditMembership";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">@ViewBag.Title</h1>
-    </div>
-</div>
+﻿<page-header page-title="Edit Membership"></page-header>
 
 <div ng-controller="membershipController as mc">
     <manage-membership active-tab="mc.activeTab"
