--- a/ChurchResourceManagerWeb/Views/Membership/Home.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/Home.cshtml
@@ -1,14 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "Membership";
-}
-
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">@ViewBag.Title</h1>
-    </div>
-    <!-- /.col-lg-12 -->
-</div>
+﻿<page-header page-title="Membership"></page-header>
 
 
 
