--- a/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Membership/MembersSearch.cshtml
@@ -1,14 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "Members Search";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">@ViewBag.Title</h1>
-    </div>
-</div>
+﻿<page-header page-title="Members Search"></page-header>
 
 <div ng-controller="membershipController as mc">
     <members-grid open-edit-modal="mc.openEditMembershipModal(member)" get-member-search-data="mc.getMemberSearch()" members="mc.members"></members-grid>
