--- a/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
+++ b/ChurchResourceManagerWeb/Views/Offerings/OfferingsSearch.cshtml
@@ -1,13 +1,4 @@
-﻿
-@{
-    ViewBag.Title = "OfferingsSearch";
-}
-
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">@ViewBag.Title</h1>
-    </div>
-</div>
+﻿<page-header page-title="Offerings Search"></page-header>
 
 <div ng-controller="offeringController as oc">
     <offering-activity get-offering-activity="oc.getOfferingActivity(offeringActivityType)"
