--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -69,6 +69,17 @@
                         </li>
                     </ul>
                 </li>
+                <li>
+                    <a ng-href="#"><i class="fa fa-bank fa-fw"></i> Manage Transactions<span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level">
+                        <li>
+                            <a ng-href="/Transactions/SubmitTransactions">Submit Transaction</a>
+                        </li>
+                        <li>
+                            <a ng-href="/">View Transactions</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
