--- a/ChurchResourceManagerWeb/Views/Transactions/_submitTransaction.cshtml
+++ b/ChurchResourceManagerWeb/Views/Transactions/_submitTransaction.cshtml
@@ -1,1 +1,76 @@
-﻿
+﻿<div class="row">
+    <form id="stc.transactionsForm" name="stc.transactionsForm" novalidate ng-submit="stc.submit(stc.transaction, stc.transactionsForm)" autocomplete="off">
+        <!--Transaction Type-->
+        <div class="col-xs-2">
+            <div class="form-group">
+                <label for="ddlTransactionType">Transaction Type</label>
+                <select id="ddlTransactionType" name="ddlTransactionType" class="form-control" ng-model="stc.transaction.SelectedTransactionType" ng-options="t.Description for t in stc.enums.TransactionTypes" required></select>
+                <div class="help-block-error" ng-messages="stc.transactionsForm.ddlTransactionType.$error" ng-if="stc.transactionsForm.ddlTransactionType.$touched">
+                    <div ng-messages-include="message-template"></div>
+                </div>
+            </div>
+
+            <!--Date-->
+            <div class="form-group">
+                <label for="dateTxtBx">Date</label>
+                <input id="dateTxtBx"
+                       name="dateTxtBx"
+                       class="form-control"
+                       type="text"
+                       placeholder="Date (mm/dd/yyyy)"
+                       ng-model="stc.transaction.TransactionDate"
+                       ui-mask="99/99/9999"
+                       ui-mask-placeholder
+                       model-view-value="true"
+                       required />
+                <div class="help-block-error" ng-messages="stc.transactionsForm.dateTxtBx.$error" ng-if="stc.transactionsForm.dateTxtBx.$touched || stc.transactionsForm.$submitted">
+                    <div ng-messages-include="message-template"></div>
+                </div>
+            </div>
+
+            <!--Check Number-->
+            <div class="form-group">
+                <label for="checkNumberTxtBx">Check Number</label>
+                <input id="checkNumberTxtBx" name="checkNumberTxtBx" class="form-control" type="number" placeholder="1234"
+                       ng-model="stc.transaction.CheckNumber" />
+                <div class="help-block-error" ng-messages="stc.transactionsForm.checkNumberTxtBx.$error" ng-if="stc.transactionsForm.checkNumberTxtBx.$touched || stc.transactionsForm.$submitted">
+                    <div ng-messages-include="message-template"></div>
+                </div>
+            </div>
+
+            <!--Bank Posted Date-->
+            <div class="form-group">
+                <label for="bankPostedDateTxtBx">Bank Posted Date</label>
+                <input id="bankPostedDateTxtBx"
+                       name="bankPostedDateTxtBx"
+                       class="form-control"
+                       type="text"
+                       placeholder="Date (mm/dd/yyyy)"
+                       ng-model="stc.transaction.BankPostedDate"
+                       ui-mask="99/99/9999"
+                       ui-mask-placeholder
+                       model-view-value="true" />
+            </div>
+
+            <!--Is Debit-->
+            <div class="btn-group" data-toggle="buttons" style="padding-bottom: 5%;">
+                <label class="btn btn-default">
+                    <input type="checkbox" name="isDebitCkBx" autocomplete="off" ng-model="stc.transaction.IsDebit" /> Is Debit?
+                </label>
+            </div>
+
+            <!--Comments-->
+            <div class="form-group">
+                <label for="commentsTxtBx">Comments</label>
+                <textarea id="commentsTxtBx" name="commentsTxtBx" class="form-control" placeholder="This is to pay for..."
+                          ng-model="stc.transaction.Comments" maxlength="255"></textarea>
+            </div>
+
+            <!--Submit and Clear Form Buttons-->
+            <div style="padding-top: 10%; padding-bottom: 10%;">
+                <button id="submitBtn" name="submitBtn" class="btn btn-default" type="submit">Save</button>
+                <button id="clearFormBtn" name="clearFormBtn" class="btn btn-default" type="button" ng-click="stc.clearForm(stc.transactionsForm)">Clear Form</button>
+            </div>
+        </div>
+    </form>
+</div>
