Added Transactions Grid

--- a/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
+++ b/ChurchResourceManagerWeb/Views/Shared/_NavBar.cshtml
@@ -76,7 +76,7 @@
                             <a ng-href="/Transactions/SubmitTransactions">Submit Transaction</a>
                         </li>
                         <li>
-                            <a ng-href="/">View Transactions</a>
+                            <a ng-href="/Transactions/TransactionsSearch">View Transactions</a>
                         </li>
                     </ul>
                 </li>
